--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ edition = "2018"
 [dependencies]
 image = "0.23.14"
 num-complex = "0.4.0"
-uuid = { version = "0.8", features = ["v4"] }
+# uuid = { version = "0.8", features = ["v4"] }
+indicatif = "0.15.0"
